# DantaroCentral

./: .gitignore  DETAILED_DOCS_ANALYSIS.md  DOCUMENTATION_CLEANUP_REPORT.md  DOCUMENTATION_ORGANIZATION_REPORT.md  Dockerfile  FINAL_DOCS_ORGANIZATION_SUMMARY.md  MULTI_EXCHANGE_COMPLETION_REPORT.md  README.md  alertmanager.yml  analyze_docs.py  check_background_tasks.py  check_redis_workers.py  cleanup_docs.py  cleanup_docs.sh  cleanup_modular_exchanges.py  cleanup_project.py  dantaro_central_client.py  dantaro_enterprise_integration.py  dashboard_status_check.py  direct_api_test.py  docker-compose.yml  final_cleanup.sh  final_docs_check.py  final_system_check.sh  generate_project_report.py  monitor_server.py  optimize_architecture.py  organize_docs.py  organize_docs_final.py  prometheus.yml  pyproject.toml  quick_data_check.py  real_data_service.py  send_test_data.py  show_top_50_coins.py  start_server.sh  test_api_call.html  verify_sorting.py  view_cached_data.py  view_collected_data.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
backend/: .env.example  OVERALL_PROGRESS_ANALYSIS.md  PHASE11_COMPLETION_REPORT.md  PHASE13_COMPLETION_REPORT.md  README_PRODUCTION.md  activate_websockets.py  analysis_worker.py  apply_optimizations.py  check_env_status.py  cleanup_and_finalize.py  dashboard_data_service.py  dashboard_monitor.py  debug_server.py  debug_ws_server.py  deploy.sh  diagnostic_server.py  diagnostic_tool.py  migrate.py  minimal_server.py  optimization_config.py  quick_api_test.py  requirements-dev.txt  requirements-prod.txt  requirements.txt  requirements_without_talib.txt  save_test_results.py  setup_production_keys.py  simple_real_collector.py  standard_server.py  start_multi_exchange_service.sh  start_realtime_service.sh  start_worker.sh  verify_realtime_system.py  websocket_debug_client.py  websocket_diagnostics.html  websocket_flow_test.py  websocket_logger.py  websocket_pure_client.py  ws_quick_test.py
backend/app/: __init__.py  main.py  main_clean.py  main_old_backup.py
backend/archive/: MODULARIZATION_COMPLETION_REPORT.md  PHASE10_COMPLETION_REPORT.md  PHASE14_COMPLETION_REPORT.md  PHASE9_COMPLETION_REPORT.md  dantaro_multi_exchange_service.py  dantaro_orchestrator.py  dantaro_realtime_service.py  dashboard_data_service.py
deployment/: deploy.sh
docs/: DEPLOYMENT_AUTOMATION.md  OPENAPI_USAGE.md  README.md  README_BADGES.md  api-key-setup-guide.md  copilot-guide-central.md  next-phase-roadmap.md  refactoring-plan.md  websocket-integration-complete.md
docs_backup/: SECURITY_CHECKLIST.md  SETTINGS_REFERENCE.md  SPHINX_SETUP.md  phase6-completion-report.md  worker-architecture.md
(+180 files in other folders)
